# pico-bmc

./: .gitignore  CMakeLists.txt  Makefile  bmc.c  bmc_handler.h  cgi.h  handlers.h  http_parser.h  http_serv.h  lwipopts.h  main.c  makefsdata.py  network.h  pico_lib.h  serial_handler.h  ssi.h  template.secret.h
hardware/kicad/: fp-info-cache  fp-lib-table  pico_bmc.kicad_pcb  pico_bmc.kicad_prl  pico_bmc.kicad_pro  pico_bmc.kicad_sch  sym-lib-table
hardware/kicad/TFP401APZPR/KiCADv6/: 2024-08-11_03-25-27.kicad_sym
hardware/kicad/TFP401APZPR/KiCADv6/footprints.pretty/: PZP100_5P2X5P2-L.kicad_mod  PZP100_5P2X5P2-M.kicad_mod  PZP100_5P2X5P2.kicad_mod
hardware/ltspice/: bmc_pw_state_sim.asc  bmc_pw_switch_sim.asc
hw/: BMC_PW_SW_Sim.asc
www/: error_missing_requested_state.ssi  error_requested_state_invalid.ssi  status.ssi
